--- a/features.html
+++ b/features.html
@@ -44,7 +44,11 @@
             </header>
         </section>
         <section id="slider">
-            
+            <img src="img/arielview.jpg" alt="arielview" id="arielviewimage">
+            <div id="featuresraw">
+                <h3>Price Match Guarantee</h3>
+                <p>Only the Best</p>
+            </div>
         </section>
     </main>
     <hr>
