--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     <br>reach out, we’d love to hear from you.
                 </p>
             </div>
-            <form>
+            <form action="https://formspree.io/xjvoqdvj" method="POST">
                 <label>
                     <textarea id="message" name="Message" placeholder="Message" style="width:520px; height:175px;" required></textarea>
                 </label>
