--- a/index.html
+++ b/index.html
@@ -1,172 +1,177 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Home | LembergTrans</title>
-    <link rel="icon" href="img/logo.jpeg">
-    <link href="styles.css" rel="stylesheet">
-    <script src="script.js"></script>
-
-</head>
-<body>
-    <header>
-        <h1><b>LembergTrans</b></h1>
-        <div id="credo">
-            <p>Quality.Efficiency.Support.</p>
-        </div>
-         <nav>
-            <ul>
-                <li>
-                    <a href="index.html">Home</a>
-                </li>
-                <li>
-                    <a href="about.html">About</a>
-                </li>
-                <li>
-                    <a href="features.html">Features</a>
-                </li>
-                <li>
-                    <a href="contact.html">Contact</a>
-                </li>
-                <li>
-                    <a href="#clients">Clients</a>
-                </li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <section id="home">
-            <h3>LembergTrans</h3>
-            <p>Logistic Solutions</p>
-            <img src="img/vnl-raw.jpg" alt="vnl-raw" id="vnl-raw">
-        </section>
-        <hr>
-        <br>
-        <section id="who-we-are">
-            <h2>Who We Are</h2>
-            <div id="background">
-            <p>
-                Our Background
-                <br>
-                <br>
-                For 25 years, PJSC TEK "LembergTrans" has been providing cargo transportation services and is a leader in the international road haulage market. There are 300 Euro-6 Volvo trucks in the company arsenal. Among them are 240 units with awning semi-trailers of the Koegel and Schmitz brands and 60 Schmitz refrigerated semi-trailers. The state-of-the-art car fleet, rich experience and high professionalism of the personnel guarantee the reliable, timely and safe delivery of your cargo.
-            </p>
-                <img src="img/twoeufh.jpg" alt="eurotracks" id="eurotracksimage" >
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>Home | LembergTrans</title>
+        <link rel="icon" href="img/logo.jpeg">
+        <link href="styles.css" rel="stylesheet">
+        <script src="script.js"></script>
+    </head>
+    <body>
+        <header>
+            <h1>
+                <b>LembergTrans</b>
+            </h1>
+            <div id="credo">
+                <p>Quality.Efficiency.Support.</p>
             </div>
-        </section>
-        <hr>
-        <br>
-        <section id="best-partners">
-            <h2>Why We Are The
+            <nav>
+                <ul>
+                    <li>
+                        <a href="index.html">Home</a>
+                    </li>
+                    <li>
+                        <a href="about.html">About</a>
+                    </li>
+                    <li>
+                        <a href="features.html">Features</a>
+                    </li>
+                    <li>
+                        <a href="contact.html">Contact</a>
+                    </li>
+                    <li>
+                        <a href="#clients">Clients</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            <section id="home">
+                <h3>LembergTrans</h3>
+                <p>Logistic Solutions</p>
+                <img src="img/vnl-raw.jpg" alt="vnl-raw" id="vnl-raw">
+            </section>
+            <hr>
             <br>
-            Best Partners?</h2>
+            <section id="who-we-are">
+                <h2>Who We Are</h2>
+                <div id="background">
+                    <p>
+                        Our Background
+                <br>
+                        <br>For 25 years, PJSC TEK "LembergTrans" has been providing cargo transportation services and is a leader in the international road haulage market. There are 300 Euro-6 Volvo trucks in the company arsenal. Among them are 240 units with awning semi-trailers of the Koegel and Schmitz brands and 60 Schmitz refrigerated semi-trailers. The state-of-the-art car fleet, rich experience and high professionalism of the personnel guarantee the reliable, timely and safe delivery of your cargo.
+            
+                    </p>
+                    <img src="img/twoeufh.jpg" alt="eurotracks" id="eurotracksimage">
+                </div>
+            </section>
+            <hr>
             <br>
-            <div id="gps">
-                <h3>GPS Fleet Tracking</h3>
-                <p>Always Prepared</p>
-                <img src="img/gpstracking.jpg" alt="gpstracking" id="gpsimage">
-            </div>
-            <div id="route-planing">
-                <h3>Route Planning</h3>
-                <p>Attention to Detail</p>
-                <img src="img/map.jpg" alt="map" id="mapimage">
-            </div>
-            <div id="inventory-management">
-                <h3>Inventory Management</h3>
-                <p>Expert Service</p>
-                <img src="img/service.jpg" alt="service" id="serviceimage">
-            </div>
-        </section>
-        <hr>
-        <section id="quote">
-            <div id="quotecontent">
-                <div id="quotetext">
-                    <p>Experience without theory is blind, but theory</p>
-                    <p>without experience is mere intellectual play.</p>
-                 </div>
-                <div id="quoteauthor">
-                    <p>Immanuel Kant</p>
+            <section id="best-partners">
+                <h2>
+                    Why We Are The
+            <br>Best Partners?
+                </h2>
+                <br>
+                <div id="gps">
+                    <h3>GPS Fleet Tracking</h3>
+                    <p>Always Prepared</p>
+                    <img src="img/gpstracking.jpg" alt="gpstracking" id="gpsimage">
+                </div>
+                <div id="route-planing">
+                    <h3>Route Planning</h3>
+                    <p>Attention to Detail</p>
+                    <img src="img/map.jpg" alt="map" id="mapimage">
+                </div>
+                <div id="inventory-management">
+                    <h3>Inventory Management</h3>
+                    <p>Expert Service</p>
+                    <img src="img/service.jpg" alt="service" id="serviceimage">
+                </div>
+            </section>
+            <hr>
+            <div id="quote">
+                <div id="quotecontent">
+                    <div id="quotetext">
+                        <p>Experience without theory is blind, but theory</p>
+                        <p>without experience is mere intellectual play.</p>
+                    </div>
+                    <div id="quoteauthor">
+                        <p>Immanuel Kant</p>
+                    </div>
                 </div>
             </div>
-        </section>
-        <hr>
-        <br>
-        <section id="clients">
-            <h2>Our Clients</h2>
+            <hr>
             <br>
-            <div id="clientscontent">
-                <div>
-                    <p>Sample Text</p>
-                </div>
-                <hr>
+            <section id="clients">
+                <h2>Our Clients</h2>
                 <br>
-                <div id="commentauthor">
-                    <p>Comment author</p>
+                <div id="clientscontent">
+                    <div>
+                        <p>Sample Text</p>
+                    </div>
+                    <hr>
+                    <br>
+                    <div id="commentauthor">
+                        <p>Comment author</p>
+                    </div>
                 </div>
-            </div>
-        </section>
-        <hr>
-        <br>
-        <section id="contactsection">
-            <header>
-                <h2>You Have Cargo?<br>We Have Solution.</h2>
-            </header>
-            <div id="contactcontent">
-                <p>
-                    Questions, comments or requests? Feel free to 
+            </section>
+            <hr>
+            <br>
+            <section id="contactsection">
+                <header>
+                    <h2>
+                        You Have Cargo?<br>We Have Solution.
+                    </h2>
+                </header>
+                <div id="contactcontent">
+                    <p>
+                        Questions, comments or requests? Feel free to 
                     <br>reach out, we’d love to hear from you.
-                </p>
-            </div>
-            <form action="https://formspree.io/xjvoqdvj" method="POST">
-                <label>
-                    <textarea id="message" name="Message" placeholder="Message" style="width:520px; height:175px;" required></textarea>
-                </label>
-                <br>
-                <label>
-                    <input id="email" type="email" placeholder="Email" name="Email" required>
-                </label>
-                <br>
-                <label>
-                    <input id="name" type="text" placeholder="Full Name" name="Name" required>
-                </label>
-                <br>
-                <div id="formbuttons" >
-                    <input type="submit">
+                
+                    </p>
                 </div>
-            </form>
-            <br>
-            <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1X5hVBFrRpWsUaKHvxBJqb9kPBlIf6lP5" width="530" height="230"></iframe>
-        </section>
-    </main>
-    <hr>
-    <br>
-    <footer>
-        <nav>
-            <ul>
-                <li>
-                    <a href="index.html">Home</a>
-                </li>
-                <li>
-                    <a href="about.html">About</a>
-                </li>
-                <li>
-                    <a href="features.html">Features</a>
-                </li>
-                <li>
-                    <a href="contact.html">Contact</a>
-                </li>
-                <li>
-                    <a href="#clients">Clients</a>
-                </li>
-            </ul>
-        </nav>
-        <div id="contactinfo">
-            <p>123-122-1323 yura.leshchuk03@gmail.com</p>
-            <p>1715 Soborna str, Lemberg, Ukraine</p>
-            <p>©LembergTrans</p>
-        </div>
-    </footer>
-</body>
+                <form action="https://formspree.io/xjvoqdvj" method="POST">
+                    <label>
+                        <textarea id="message" name="Message" placeholder="Message" style="width:520px; height:175px;" required></textarea>
+                    </label>
+                    <br>
+                    <label>
+                        <input id="email" type="email" placeholder="Email" name="Email" required>
+                    </label>
+                    <br>
+                    <label>
+                        <input id="name" type="text" placeholder="Full Name" name="Name" required>
+                    </label>
+                    <br>
+                    <div id="formbuttons">
+                        <input type="submit">
+                    </div>
+                </form>
+                <br>
+                <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1X5hVBFrRpWsUaKHvxBJqb9kPBlIf6lP5" width="530" height="230"></iframe>
+            </section>
+        </main>
+        <hr>
+        <br>
+        <footer>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="index.html">Home</a>
+                    </li>
+                    <li>
+                        <a href="about.html">About</a>
+                    </li>
+                    <li>
+                        <a href="features.html">Features</a>
+                    </li>
+                    <li>
+                        <a href="contact.html">Contact</a>
+                    </li>
+                    <li>
+                        <a href="#clients">Clients</a>
+                    </li>
+                </ul>
+            </nav>
+            <div id="contactinfo">
+                <p>123-122-1323 yura.leshchuk03@gmail.com</p>
+                <p>1715 Soborna str, Lemberg, Ukraine</p>
+                <p>©LembergTrans</p>
+            </div>
+        </footer>
+    </body>
 </html>
