--- a/about.html
+++ b/about.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>About | LembergTrans</title>
     <link rel="icon" href="img/logo.jpeg">
-    <link href="styles.css" rel="stylesheet">
-    <script src="script.js"></script>
+    <link href="styles/header.css" rel="stylesheet">
+    <link href="styles/footer.css" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -16,7 +16,7 @@
             <p>Quality.Efficiency.Support.</p>
         </div>
          <nav>
-            <ul>
+            <ul class="top-menu">
                 <li>
                     <a href="index.html">Home</a>
                 </li>
@@ -54,7 +54,7 @@
     <br>
     <footer>
         <nav>
-            <ul>
+            <ul class="bottomn-menu">
                 <li>
                     <a href="index.html">Home</a>
                 </li>
