--- a/index.html
+++ b/index.html
@@ -6,19 +6,20 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Home | LembergTrans</title>
         <link rel="icon" href="img/logo.jpeg">
-        <link href="styles.css" rel="stylesheet">
-        <script src="script.js"></script>
+        <link href="styles/index.css" rel="stylesheet">
+        <link href="styles/header.css" rel="stylesheet">
+        <link href="styles/footer.css" rel="stylesheet">
     </head>
     <body>
         <header>
             <h1>
-                <b>LembergTrans</b>
+                LembergTrans
             </h1>
             <div id="credo">
-                <p>Quality.Efficiency.Support.</p>
+                Quality.Efficiency.Support.
             </div>
             <nav>
-                <ul>
+                <ul class="top-menu">
                     <li>
                         <a href="index.html">Home</a>
                     </li>
@@ -44,7 +45,6 @@
                 <img src="img/vnl-raw.jpg" alt="vnl-raw" id="vnl-raw">
             </section>
             <hr>
-            <br>
             <section id="who-we-are">
                 <h2>Who We Are</h2>
                 <div id="background">
@@ -58,7 +58,6 @@
                 </div>
             </section>
             <hr>
-            <br>
             <section id="best-partners">
                 <h2>
                     Why We Are The
@@ -94,7 +93,6 @@
                 </div>
             </div>
             <hr>
-            <br>
             <section id="clients">
                 <h2>Our Clients</h2>
                 <br>
@@ -110,7 +108,6 @@
                 </div>
             </section>
             <hr>
-            <br>
             <section id="contactsection">
                 <header>
                     <h2>
@@ -141,12 +138,10 @@
                         <input type="submit">
                     </div>
                 </form>
-                <br>
                 <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1X5hVBFrRpWsUaKHvxBJqb9kPBlIf6lP5" width="530" height="230"></iframe>
             </section>
         </main>
         <hr>
-        <br>
         <footer>
             <nav>
                 <ul>
