--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Features | LembergTrans</title>
+    <title>Contact | LembergTrans</title>
     <link rel="icon" href="img/logo.jpeg">
     <link href="styles/header.css" rel="stylesheet">
     <link href="styles/footer.css" rel="stylesheet">
@@ -30,7 +30,7 @@
                     <a href="contact.html">Contact</a>
                 </li>
                 <li>
-                    <a href="index.html/#clients">Clients</a>
+                    <a href="index.html#clients">Clients</a>
                 </li>
             </ul>
         </nav>
@@ -74,8 +74,8 @@
     <br>
     <footer>
         <nav>
-            <ul>
-                <li class="bottomn-menu">
+            <ul class="bottomn-menu">
+                <li>
                     <a href="index.html">Home</a>
                 </li>
                 <li>
@@ -88,7 +88,7 @@
                     <a href="contact.html">Contact</a>
                 </li>
                 <li>
-                    <a href="#clients">Clients</a>
+                    <a href="index.html#clients">Clients</a>
                 </li>
             </ul>
         </nav>
