--- a/features.html
+++ b/features.html
@@ -30,7 +30,7 @@
                     <a href="contact.html">Contact</a>
                 </li>
                 <li>
-                    <a href="index.html/#clients">Clients</a>
+                    <a href="index.html#clients">Clients</a>
                 </li>
             </ul>
         </nav>
@@ -53,7 +53,7 @@
     </main>
     <hr>
     <br>
-    <footer>
+     <footer>
         <nav>
             <ul class="bottomn-menu">
                 <li>
@@ -69,7 +69,7 @@
                     <a href="contact.html">Contact</a>
                 </li>
                 <li>
-                    <a href="#clients">Clients</a>
+                    <a href="index.html#clients">Clients</a>
                 </li>
             </ul>
         </nav>
