--- a/index.html
+++ b/index.html
@@ -40,9 +40,10 @@
         </header>
         <main>
             <section id="home">
-                <h3>LembergTrans</h3>
-                <p>Logistic Solutions</p>
-                <img src="img/vnl-raw.jpg" alt="vnl-raw" id="vnl-raw">
+                <div id="home-content">
+                    <h3>LembergTrans</h3>
+                    <p>Logistic Solutions</p>
+                </div>
             </section>
             <hr>
             <section id="who-we-are">
@@ -143,30 +144,31 @@
         </main>
         <hr>
         <footer>
-            <nav>
-                <ul>
-                    <li>
-                        <a href="index.html">Home</a>
-                    </li>
-                    <li>
-                        <a href="about.html">About</a>
-                    </li>
-                    <li>
-                        <a href="features.html">Features</a>
-                    </li>
-                    <li>
-                        <a href="contact.html">Contact</a>
-                    </li>
-                    <li>
-                        <a href="#clients">Clients</a>
-                    </li>
-                </ul>
-            </nav>
-            <div id="contactinfo">
-                <p>123-122-1323 yura.leshchuk03@gmail.com</p>
-                <p>1715 Soborna str, Lemberg, Ukraine</p>
-                <p>©LembergTrans</p>
-            </div>
-        </footer>
+        <nav>
+            <ul class="bottomn-menu">
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+                <li>
+                    <a href="about.html">About</a>
+                </li>
+                <li>
+                    <a href="features.html">Features</a>
+                </li>
+                <li>
+                    <a href="contact.html">Contact</a>
+                </li>
+                <li>
+                    <a href="index.html#clients">Clients</a>
+                </li>
+            </ul>
+        </nav>
+        <hr>
+        <div id="contactinfo">
+            <p>123-122-1323 yura.leshchuk03@gmail.com</p>
+            <p>1715 Soborna str, Lemberg, Ukraine</p>
+            <p>©LembergTrans</p>
+        </div>
+    </footer>
     </body>
 </html>
