--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
                     <a href="contact.html">Contact</a>
                 </li>
                 <li>
-                    <a href="index.html/#clients">Clients</a>
+                    <a href="index.html#clients">Clients</a>
                 </li>
             </ul>
         </nav>
@@ -68,10 +68,11 @@
                     <a href="contact.html">Contact</a>
                 </li>
                 <li>
-                    <a href="#clients">Clients</a>
+                    <a href="index.html#clients">Clients</a>
                 </li>
             </ul>
         </nav>
+        <hr>
         <div id="contactinfo">
             <p>123-122-1323 yura.leshchuk03@gmail.com</p>
             <p>1715 Soborna str, Lemberg, Ukraine</p>
