--- a/index.html
+++ b/index.html
@@ -52,41 +52,64 @@
                     <p>
                         Our Background
                 <br>
-                        <br>For 25 years, PJSC TEK "LembergTrans" has been providing cargo transportation services and is a leader in the international road haulage market. There are 300 Euro-6 Volvo trucks in the company arsenal. Among them are 240 units with awning semi-trailers of the Koegel and Schmitz brands and 60 Schmitz refrigerated semi-trailers. The state-of-the-art car fleet, rich experience and high professionalism of the personnel guarantee the reliable, timely and safe delivery of your cargo.
+                <br>
+                        <br>For 25 years, PJSC TEK 
+                        <br>
+                        "LembergTrans" has been providing 
+                        <br>
+                        cargo transportation services and is 
+                        <br>a leader in the international road 
+                        <br>haulage market. There are 300 
+                        <br>Euro-6 Volvo trucks in the company 
+                        <br>arsenal. Among them are 240 units 
+                        <br>with awning semi-trailers of the 
+                        <br>"Koegel" and "Schmitz brands" and
+                        <br>60 Schmitz refrigerated semi-trailers. 
+                        <br>The state-of-the-art car fleet, rich 
+                        <br>experience and high professionalism of 
+                        <br>the personnel guarantee the reliable, 
+                        <br>timely and safe delivery of your cargo.
             
                     </p>
+                
+                </div>
+                <div>
                     <img src="img/twoeufh.jpg" alt="eurotracks" id="eurotracksimage">
                 </div>
             </section>
-            <hr>
             <section id="best-partners">
-                <h2>
-                    Why We Are The
-            <br>Best Partners?
-                </h2>
-                <br>
+                <div id="best-partners-text">
+                        Why We Are The
+                       <br>Best Partners?
+                </div>
                 <div id="gps">
-                    <h3>GPS Fleet Tracking</h3>
+                    GPS Fleet Tracking
+                    <br>
                     <p>Always Prepared</p>
+                </div>
+                <div>
                     <img src="img/gpstracking.jpg" alt="gpstracking" id="gpsimage">
                 </div>
                 <div id="route-planing">
-                    <h3>Route Planning</h3>
+                    Route Planning
                     <p>Attention to Detail</p>
-                    <img src="img/map.jpg" alt="map" id="mapimage">
+                </div>
+                <div>
+                    <img src="img/map-max.jpg" alt="map" id="mapimage">
                 </div>
                 <div id="inventory-management">
-                    <h3>Inventory Management</h3>
+                    Inventory Management
                     <p>Expert Service</p>
+                </div>
+                <div id="service">
                     <img src="img/service.jpg" alt="service" id="serviceimage">
                 </div>
             </section>
-            <hr>
             <div id="quote">
                 <div id="quotecontent">
                     <div id="quotetext">
-                        <p>Experience without theory is blind, but theory</p>
-                        <p>without experience is mere intellectual play.</p>
+                        Experience without theory is blind, but theory<br>
+                        without experience is mere intellectual play.
                     </div>
                     <div id="quoteauthor">
                         <p>Immanuel Kant</p>
