--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Home | LembergTrans</title>
         <link rel="icon" href="img/logo.jpeg">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <link href="styles/index.css" rel="stylesheet">
         <link href="styles/header.css" rel="stylesheet">
         <link href="styles/footer.css" rel="stylesheet">
@@ -48,6 +49,7 @@
             <hr>
             <section id="who-we-are">
                 <h2>Who We Are</h2>
+            <div class="container">
                 <div id="background">
                     <p>
                         Our Background
@@ -76,6 +78,7 @@
                 <div>
                     <img src="img/twoeufh.jpg" alt="eurotracks" id="eurotracksimage">
                 </div>
+            </div>
             </section>
             <section id="best-partners">
                 <div id="best-partners-text">
@@ -118,25 +121,55 @@
             </div>
             <hr>
             <section id="clients">
-                <h2>Our Clients</h2>
-                <br>
-                <div id="clientscontent">
-                    <div>
-                        <p>Sample Text</p>
-                    </div>
-                    <hr>
-                    <br>
-                    <div id="commentauthor">
-                        <p>Comment author</p>
-                    </div>
+                <div id="clients-header">
+                    Our Clients
                 </div>
+                <div id="clientsCarousel" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                      <li data-target="#clientsCarousel" data-slide-to="0" class="active"></li>
+                      <li data-target="#clientsCarousel" data-slide-to="1"></li>
+                      <li data-target="#clientsCarousel" data-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img src="img/dhl.png" class="d-block w-100" alt="dhl">
+                        <div class="carousel-caption">
+                          <h5>SEO DHL Martin Lyrks:</h5>
+                          <p>Happy to work with LembergTrans.</p>
+                        </div>
+                      </div>
+                      <div class="carousel-item">
+                        <img src="img/apple.jpg" class="d-block w-100" alt="federal">
+                        <div class="carousel-caption">
+                          <h5>SEO APPLE Steve Jobs:</h5>
+                          <p>Very cool team.</p>
+                        </div>
+                      </div>
+                      <div class="carousel-item">
+                        <img src="img/klogistick.jpg" class="d-block w-100" alt="klogistick">
+                        <div class="carousel-caption">
+                          <h5>SEO KLOGISTIC Acron Mores:</h5>
+                          <p>Appreciate stuff that provide this company.</p>
+                        </div>
+                      </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#clientsCarousel" role="button" data-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#clientsCarousel" role="button" data-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="sr-only">Next</span>
+                    </a>
+                  </div>
             </section>
             <hr>
             <section id="contactsection">
                 <header>
-                    <h2>
+                    <div id="contactHeader">
                         You Have Cargo?<br>We Have Solution.
-                    </h2>
+                    </div>
+                       
                 </header>
                 <div id="contactcontent">
                     <p>
@@ -147,13 +180,12 @@
                 </div>
                 <form action="https://formspree.io/xjvoqdvj" method="POST">
                     <label>
-                        <textarea id="message" name="Message" placeholder="Message" style="width:520px; height:175px;" required></textarea>
+                        <textarea id="message" name="Message" placeholder="Message" required></textarea>
                     </label>
                     <br>
                     <label>
                         <input id="email" type="email" placeholder="Email" name="Email" required>
                     </label>
-                    <br>
                     <label>
                         <input id="name" type="text" placeholder="Full Name" name="Name" required>
                     </label>
@@ -162,7 +194,8 @@
                         <input type="submit">
                     </div>
                 </form>
-                <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1X5hVBFrRpWsUaKHvxBJqb9kPBlIf6lP5" width="530" height="230"></iframe>
+                <iframe id="frame" src="https://www.google.com/maps/d/u/0/embed?mid=1X5hVBFrRpWsUaKHvxBJqb9kPBlIf6lP5"></iframe> 
+                </iframe>
             </section>
         </main>
         <hr>
@@ -193,5 +226,8 @@
             <p>©LembergTrans</p>
         </div>
     </footer>
+        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     </body>
 </html>
