--- a/index.html
+++ b/index.html
@@ -194,6 +194,13 @@
                         <input type="submit">
                     </div>
                 </form>
+                <div id="calculation">
+                    <input type="text" id="weight"  placeholder="Weight" required>
+                    <input type="text" id="distance" placeholder="Distance" required>
+                    <button onclick="calc()">Calculate carrier price</button>
+                    <div id="rate"></div>
+                    <div id="summ"></div>
+                </div>
                 <iframe id="frame" src="https://www.google.com/maps/d/u/0/embed?mid=1X5hVBFrRpWsUaKHvxBJqb9kPBlIf6lP5"></iframe> 
                 </iframe>
             </section>
