--- a/index.html
+++ b/index.html
@@ -195,6 +195,11 @@
                     </div>
                 </form>
                 <div id="calculation">
+                    <select id="transport">
+                        <option value="truck">Truck</option>
+                        <option value="plane">Plane</option>
+                        <option value="ship">Ship</option>
+                    </select>
                     <input type="text" id="weight"  placeholder="Weight" required>
                     <input type="text" id="distance" placeholder="Distance" required>
                     <button onclick="calc()">Calculate carrier price</button>
