--- a/index.html
+++ b/index.html
@@ -195,7 +195,8 @@
                         <input class="btn btn-outline-dark" type="submit" value="Submit">
                     </div>
                 </form>
-                <div id="calculation">
+                <h2>Calculate the cost of your delivery:</h2>
+                <div id="calculation"> 
                     <select id="transport" class="btn btn-secondary dropdown-toggle">
                         <option value="truck">Truck</option>
                         <option value="plane">Plane</option>
@@ -203,7 +204,7 @@
                     </select>
                     <input type="text" id="weight" class="form-control"  placeholder="Weight (ton)" required>
                     <input type="text" id="distance" class="form-control" placeholder="Distance (km)" required> <br>
-                    <button class="btn btn-outline-secondary" id="buttoncalc" onclick="calc()">Calculate carrier price</button>
+                    <button class="btn btn-outline-secondary" id="buttoncalc" onclick="calc()">Calculate delivery price</button>
                     <div id="rate"></div>
                     <div id="summ"></div>
                 </div>
