--- a/index.html
+++ b/index.html
@@ -19,25 +19,19 @@
             <div id="credo">
                 Quality.Efficiency.Support.
             </div>
-            <nav >
-                <ul class="top-menu">
-                    <li>
-                        <a href="index.html">Home</a>
-                    </li>
-                    <li>
-                        <a href="about.html">About</a>
-                    </li>
-                    <li>
-                        <a href="features.html">Features</a>
-                    </li>
-                    <li>
-                        <a href="contact.html">Contact</a>
-                    </li>
-                    <li>
-                        <a href="#clients">Clients</a>
-                    </li>
-                </ul>
-            </nav>
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                  <div class="navbar-nav">
+                    <a class="nav-item nav-link active" id="homelik" href="index.html">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-item nav-link active" id="aboutlink" href="about.html">About<span class="sr-only">(current)</span></a>
+                    <a class="nav-item nav-link active" id="featureslink" href="features.html">Features<span class="sr-only">(current)</span></a>
+                    <a class="nav-item nav-link active" id='contactlink' href="contact.html">Contact<span class="sr-only">(current)</span></a>
+                    <a class="nav-item nav-link active" id="clientslink" href="#clients">Clients<span class="sr-only">(current)</span></a>
+                </div>
+              </nav>
         </header>
         <main>
             <section id="home">
@@ -79,6 +73,7 @@
                     <img src="img/twoeufh.jpg" alt="eurotracks" id="eurotracksimage">
                 </div>
             </div>
+            <hr>
             </section>
             <div id="best-partners-text">
                 Why We Are The
@@ -109,6 +104,7 @@
                     <img src="img/service.jpg" alt="service" id="serviceimage">
                 </div>
             </section>
+            <hr>
             <div id="quote">
                 <div id="quotecontent">
                     <div id="quotetext">
@@ -154,6 +150,7 @@
                         </div>
                       </div>
                     </div>
+                    <hr>
                     <a class="carousel-control-prev" href="#clientsCarousel" role="button" data-slide="prev">
                       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                       <span class="sr-only">Previous</span>
@@ -195,6 +192,7 @@
                         <input class="btn btn-outline-dark" type="submit" value="Submit">
                     </div>
                 </form>
+                <hr>
                 <h2>Calculate the cost of your delivery:</h2>
                 <div id="calculation"> 
                     <select id="transport" class="btn btn-secondary dropdown-toggle">
