--- a/index.html
+++ b/index.html
@@ -7,16 +7,17 @@
         <title>Home | LembergTrans</title>
         <link rel="icon" href="img/logo.jpeg">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
         <link href="styles/index.css" rel="stylesheet">
         <link href="styles/header.css" rel="stylesheet">
         <link href="styles/footer.css" rel="stylesheet">
     </head>
     <body>
-        <header>
-            <h1>
+        <header >
+            <h1 class="animated jackInTheBox delay-10s">
                 LembergTrans
             </h1>
-            <div id="credo">
+            <div id="credo" class="animated jackInTheBox delay-10s">
                 Quality.Efficiency.Support.
             </div>
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -34,15 +35,15 @@
               </nav>
         </header>
         <main>
-            <section id="home">
+            <section id="home" class="animated jackInTheBox delay-10s">
                 <div id="home-content" >
-                    <h3>LembergTrans</h3>
-                    <p>Logistic Solutions</p>
+                    <h3 class="animated jackInTheBox delay-10s" >LembergTrans </h3>
+                    <p class="animated jackInTheBox delay-10s">Logistic Solutions</p>
                 </div>
             </section>
             <hr>
             <section id="who-we-are">
-                <h2>Who We Are</h2>
+                <h2 >Who We Are</h2>
             <div class="container">
                 <div id="background">
                     <p>
@@ -70,12 +71,12 @@
                 
                 </div>
                 <div>
-                    <img src="img/twoeufh.jpg" alt="eurotracks" id="eurotracksimage">
+                    <img src="img/twoeufh.jpg" alt="eurotracks" id="eurotracksimage" class="animated jackInTheBox delay-10s">
                 </div>
             </div>
             <hr>
             </section>
-            <div id="best-partners-text">
+            <div id="best-partners-text" class="animated jackInTheBox delay-10s">
                 Why We Are The
                <br>Best Partners?
         </div>
