--- a/index.html
+++ b/index.html
@@ -31,8 +31,10 @@
                     <a class="nav-item nav-link active" id="featureslink" href="features.html">Features<span class="sr-only">(current)</span></a>
                     <a class="nav-item nav-link active" id='contactlink' href="contact.html">Contact<span class="sr-only">(current)</span></a>
                     <a class="nav-item nav-link active" id="clientslink" href="#clients">Clients<span class="sr-only">(current)</span></a>
+                  </div>
                 </div>
-              </nav>
+
+            </nav>
         </header>
         <main>
             <section id="home" class="animated jackInTheBox delay-10s">
@@ -220,7 +222,6 @@
                     </div>
                 </div>
                 <iframe id="frame" src="https://www.google.com/maps/d/u/0/embed?mid=1X5hVBFrRpWsUaKHvxBJqb9kPBlIf6lP5"></iframe> 
-                </iframe>
             </section>
         </main>
         <hr>
